# industrial-audio-rag

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.yml  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  nightly-eval.yml
demo/: DEMO_SCRIPT.md  README.md  app.py  requirements.txt  spaces_config.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  qdrant.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: SECURITY.md  USER_MANUAL.md
eval/: README.md  benchmark.py  evaluation_schema.json  golden_prompts.jsonl  metrics.py  quality_gate.py  visualize.py
infra/: COST_ANALYSIS.md  DEPLOYMENT.md
infra/terraform/: eks.tf  helm.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
notebooks/: 01_eda.ipynb
ops/: README.md
ops/grafana/: dashboard.yml  provisioning.yml
ops/grafana/dashboards/: industrial-audio-rag.json
ops/grafana/datasources/: prometheus.yml
ops/prometheus/: alert_rules.yml  prometheus.yml
scripts/: get_dcase.sh
src/industrial_audio_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_audio/: api.py  indexer.py
tests/: test_api.py  test_compute_features.py  test_parse_filename.py  test_payload.py
