[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-audio-rag"
version = "0.1.0"
description = "Query factory machine sounds with Retrieval-Augmented Generation"
authors = [
    { name="Sylvain Bonnot", email="your@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchaudio",
    "qdrant-client",
    "sentence-transformers",
    "fastapi",
    "uvicorn",
    "numpy",
    "scipy",
    "tqdm",
    # Monitoring and observability
    "prometheus-client",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-exporter-jaeger-thrift",
    "opentelemetry-exporter-prometheus",
    # Security and rate limiting
    "slowapi",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "pydantic[email]",
    "bleach",
    "presidio-analyzer",
    "presidio-anonymizer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests",
    "httpx",        # for FastAPI test client
    "pytest-cov"
]

[project.urls]
Repository = "https://github.com/sylvainbonnot/industrial-audio-rag"
Documentation = "https://github.com/sylvainbonnot/industrial-audio-rag#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true
